Created: State so now the form has only controlled fields.

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,11 @@ div#user_form {
 form {
   display: flex;
   flex-direction: column;
+  width: 50vw;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  margin: 1%;
 }
